[package]
name = "flowforge"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
clap = { version = "4.4.6", features = ["derive"] }
rand = { version = "0.8.5", features = ["small_rng"] }
rand_distr = "0.4.3"
rand_xoshiro = "0.6.0"
serde = { version = "1.0.189", features = ["derive", "std"] }
serde_json = { version = "1.0.107", features = ["std"] }
