[package]
name = "flowforge"
version = "0.1.0"
authors = ["Miles Watson"]
description = "Use FlowForge to tailor congestion control algorithms to a provided network configuration."
license = "MIT"

edition = "2021"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
clap = { version = "4.4.6", features = ["derive"] }
protobuf = "3.3.0"
rand = { version = "0.8.5", features = ["small_rng"] }
rand_distr = "0.4.3"
rand_xoshiro = "0.6.0"
serde = { version = "1.0.189", features = ["derive", "std"] }
serde_json = { version = "1.0.107", features = ["std"] }

[build-dependencies]
protobuf-codegen = "3.3.0"
