[package]
name = "flowforge"
version = "0.1.0"
authors = ["Miles Watson"]
description = "Use FlowForge to tailor congestion control algorithms to a provided network configuration."
license = "MIT"

edition = "2021"
build = "build.rs"

[features]
cuda = ["dfdx/cuda"]

[profile.release]
debug = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
clap = { version = "4.4.6", features = ["derive"] }
derive_more = "0.99.17"
derive-where = "1.2.7"
dfdx = { git = "https://github.com/coreylowman/dfdx.git", features = [
    "cpu",
    "safetensors",
] }
format_num = "0.1.0"
generativity = "1.1.0"
indicatif = { version = "0.17.7", features = ["rayon"] }
itertools = "0.12.0"
ordered-float = "4.1.1"
pretty_assertions = "1.4.0"
protobuf = "3.3.0"
rand = { version = "0.8.5", features = ["small_rng"] }
rand_distr = "0.4.3"
rand_xoshiro = "0.6.0"
rayon = "1.8.0"
rustc-hash = "1.1.0"
serde = { version = "1.0.189", features = ["derive", "std"] }
serde_json = { version = "1.0.107", features = ["std"] }
tabled = "0.14.0"
tempfile = "3.8.0"
vec_map = "0.8.2"

[build-dependencies]
protobuf-codegen = "3.3.0"
