[package]
name = "flowforge_ns2"
version = "0.1.0"
authors = ["Miles Watson"]
description = "Use FlowForge to tailor congestion control algorithms to a provided network configuration."
license = "MIT"
edition = "2021"


[lib]
name = "flowforge_ns2"
crate-type = ["cdylib"]

[dependencies]
dfdx = { git = "https://github.com/coreylowman/dfdx.git", features = ["cpu"] }

[dependencies.flowforge]
path = "../flowforge"
